# QUEST

./: .gitignore  README.md  pyproject.toml
demo/: 1_index_local_data.ipynb  2_query_new_data.ipynb  3_aperture_photometry.ipynb
demo/data/: example_sources.lis  source_data.db  source_data_expanded.db  source_data_repositioned.db
demo/output/: phot_ J0924.asc  phot_ J2318.asc
quest/: __init__.py  lib_data.py  lib_photometry.py  lib_plot.py  lib_query.py  lib_util.py
quest/plugins/: handlers.py
